feat(agent): wire durable campaign report publishing